<resources>
    <string name="app_name">Cervisiam beertracking</string>
    <string name="about_text">This is app is made by students for students!\n\nDo you always want to try new beers and can\'t remember if you drank them already? Or are you a collector and want to drink them all? Or maybe you do it for some bragging rights?\n\nThere is something for everyone in this app!\n--------------------------------\n\nThe name \'Cervisiam\' comes from latin, translated it literally means beer.</string>
    <string name="about">About</string>
    <string name="overview">Overview</string>
    <string name="cervisiam">Cervisiam</string>
    <string name="add">Add Beer</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="send_password_reset_email">Send password-reset email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="login">Log In</string>
    <string name="Friendemail">Friends\' email</string>
    <string name="addfriend">Add Friend</string>
    <string name="nameOfBeer">Name of your beer</string>
    <string name="beerDescription">Description</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="Friendsuid">Friend\'s UID</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="friends">Friends</string>
    <string name="name">name</string>
    <string name="Friendsdubbelpunt">Friends:</string>
    <string name="loadingmessage">It seems that this is the end of your content!</string>
    <string name="addmorefriendsmessage">Tip: add more friends to see their beers!</string>
</resources>