<?xml version="1.0" encoding="utf-8"?>
<!--> This part has to be copied in each activity. Change the android:id only </-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FriendsActivity"
    android:id="@+id/drawer_layout">

    <!--> here you can add your specific page code. </-->

        <TableLayout
        android:id="@+id/t3_data"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_friendid"
                style="@style/viewCustom"
                android:ems="10"
                android:hint="@string/Friendsuid"
                android:inputType="text"
                android:layout_marginTop="300dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/add_friend_btn"
                style="@style/viewCustom"
                android:layout_height="73dp"
                android:layout_below="@+id/et_friendid"
                android:layout_marginBottom="27dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/addfriend"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </TableRow>
        <TableRow>
            <TextView android:id="@+id/titelfriends"
                android:text="@string/Friendsdubbelpunt"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <ListView
                android:id="@+id/friendlistview"
                android:layout_width="wrap_content"
                />

        </TableRow>

    </TableLayout>



    <!--> Just like the first part of the code the next part NEEDS to stay here, untouched.
    IF YOU CHANGE THIS OR DONT HAVE IT AT THE END OF THE FILE THE NAV WILL NOT WORK</-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary">
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navdrawer_menu"
        app:headerLayout="@layout/nav_header"
        />


</androidx.drawerlayout.widget.DrawerLayout>
    <!--> should be your end of page </-->